--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
-  "name": "todo-react-query",
+  "name": "alissa-todo-react-query",
+  "license": "MIT",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "lib/lib.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -20,9 +28,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:app": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+
+    "clean": "rm -rf ./lib",
+    "prebuild": "yarn clean",
+    "build": "tsc"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.178"
+    "@types/lodash": "^4.14.178",
+    "copyfiles": "^2.4.1"
   }
 }
