--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alissa-todo-react-query",
   "license": "MIT",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": false,
   "main": "lib/lib.js",
   "directories": {
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-query": "^3.34.7",
     "react-scripts": "5.0.0",
+    "react2angular": "^4.0.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -31,7 +32,6 @@
     "build:app": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "clean": "rm -rf ./lib",
     "prebuild": "yarn clean",
     "build": "tsc"
