--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "outDir": "lib", //probably should remove when this isn't a lib anymore
     "target": "es5",
     "lib": [
       "dom",
@@ -18,24 +17,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false, //probably should be true when this isn't a lib anymore
+    "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": ".",
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
+    "baseUrl": "."
   },
   "include": [
     "src"
-  ],
-  "exclude": [
-    "node_modules", 
-    "lib",
-    "**/*.test.ts",
-    "**/*.test.tsx",
-    "**/*.stories.tsx",
-    "./src/setupTests.ts"
-
-  ],
-  "files": ["./src/lib.ts"]
+  ]
 }
