--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "alissa-todo-react-query",
   "license": "MIT",
-  "version": "0.1.2",
+  "version": "0.2.3",
   "private": false,
-  "main": "lib/lib.js",
-  "directories": {
-    "lib": "lib"
-  },
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "files": [
-    "lib"
+    "lib/**/*"
   ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -32,9 +30,7 @@
     "build:app": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "clean": "rm -rf ./lib",
-    "prebuild": "yarn clean",
-    "build": "tsc"
+    "build": "rollup -c"
   },
   "eslintConfig": {
     "extends": [
@@ -55,7 +51,13 @@
     ]
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/lodash": "^4.14.178",
-    "copyfiles": "^2.4.1"
+    "rollup": "^2.63.0",
+    "rollup-plugin-inject-process-env": "^1.3.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
