--- a/package.json
+++ b/package.json
@@ -56,9 +56,12 @@
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
     "@types/lodash": "^4.14.178",
+    "autoprefixer": "^10.4.2",
     "rollup": "^2.63.0",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "tailwindcss": "^3.0.13"
   }
 }
