--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "alissa-todo-react-query",
   "license": "MIT",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "private": false,
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -56,8 +56,10 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@svgr/rollup": "^6.2.0",
     "@types/lodash": "^4.14.178",
     "autoprefixer": "^10.4.2",
+    "postcss-import": "^14.0.2",
     "rollup": "^2.63.0",
     "rollup-plugin-inject-process-env": "^1.3.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
