--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "classnames": "^2.3.1",
+    "dexie": "^3.2.0",
+    "dexie-react-hooks": "^1.1.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
