--- a/.github/workflows/create-rc.yml
+++ b/.github/workflows/create-rc.yml
@@ -28,6 +28,7 @@ jobs:
           git config user.email "<>"
       - run: npm version patch
       - run: yarn build
+      - run: echo TTTTTT ${{ secrets.NPM_TOKEN }}
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
