--- a/.github/workflows/create-rc.yml
+++ b/.github/workflows/create-rc.yml
@@ -44,12 +44,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          repository: 'alissaVrk/craft-redux-toolkit'
-          ref: 'main'
+          repository: 'alissaVrk/ng-with-react'
+          ref: 'master'
         - name: setup git config
           run: |
             git config user.name "GitHub Actions Bot"
             git config user.email "<>"
         - run: git checkout -b feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
-        - run: git push origin main
+        - run: npm i alissa-todo-react-query@${{needs.react.outputs.version}}.x
+        - run: git commit -am "bump react version to ${{needs.react.outputs.version}}"
+        - run: git push origin feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
 
