--- a/.github/workflows/create-hotfix.yml
+++ b/.github/workflows/create-hotfix.yml
@@ -19,14 +19,9 @@ jobs:
       version: ${{ steps.package-version.outputs.full_version }}
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: 'prod'
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-          cache: 'yarn'
-          registry-url: 'https://registry.npmjs.org'
-      - run: yarn install --frozen-lockfile
       - id: package-version
         run: node scripts/extract-version.js
       - name: setup git config
@@ -35,8 +30,7 @@ jobs:
           git config user.email "<>"
       - name: create hotfix
         run: |
-          git status
-          echo ${{ steps.package-version.outputs.full_version}} ${{ steps.package-version.outputs.version}}
+          git checkout prod
           git checkout -b hofix/${{ steps.package-version.outputs.full_version}}/${{inputs.name}}
           git push origin hofix/${{ steps.package-version.outputs.full_version}}/${{inputs.name}}
 
