--- a/.github/workflows/publish-hotfix.yml
+++ b/.github/workflows/publish-hotfix.yml
@@ -1,12 +1,9 @@
-name: create release
+name: publish hotfix
 
 on: 
-  workflow_dispatch: 
-    inputs: 
-      name: 
-        description: 'suffix for the branch names'
-        required: true
-        type: string
+  push: 
+    branches: 
+      - 'hotfix/*'
 
 jobs:
   react:
@@ -21,30 +18,22 @@ jobs:
           cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
       - run: yarn install --frozen-lockfile
-      - id: package-version
-        run: node scripts/extract-version.js
       - name: setup git config
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-      - id: branch-name
-        run: echo "::set-output name=name::release/${{ steps.package-version.outputs.version}}/${{inputs.name}}"
-      - name: create release
+      - name: bump version
         run: |
-          git checkout -b ${{ steps.branch-name.outputs.name }}
+          echo branch ${{ github.ref }}
           npm version patch -m "bump version %s"
           yarn build
-          git push origin ${{ steps.branch-name.outputs.name }} --tags
+          git push origin ${{ github.ref }} --tags
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: bump dev version
-        #do not push the tag because there is no publish
-        run: |
-          git checkout main
-          npm version minor -m "next release %s"
-          git push origin main 
-
+      - id: package-version
+        run: node scripts/extract-version.js
+  
   ng:
     runs-on: ubuntu-latest
     needs: react
@@ -52,7 +41,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'alissaVrk/ng-with-react'
-          ref: 'master'
+          ref: 'release/ng...'
           token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - name: setup git config
         run: |
