--- a/.github/workflows/create-rc.yml
+++ b/.github/workflows/create-rc.yml
@@ -15,6 +15,8 @@ jobs:
       version: ${{ steps.package-version.outputs.version }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
