--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -9,61 +9,54 @@ jobs:
   react:
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.package-version.outputs.version }}
+      version: ${{ steps.extract-name-parts.outputs.version }}
+      branch-desc: ${{ steps.extract-name-parts.outputs.desc }}
     steps:
       - uses: actions/checkout@v3
         with:
-          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
-      - run: echo GGGGGG ${{github.ref}}
-      # - run: yarn install --frozen-lockfile
-      # - id: package-version
-      #   run: node scripts/extract-version.js
-      # - name: setup git config
-      #   run: |
-      #     git config user.name "GitHub Actions Bot"
-      #     git config user.email "<>"
-      # - id: branch-name
-      #   run: echo "::set-output name=name::release/${{ steps.package-version.outputs.version}}/${{inputs.name}}"
-      # - name: create release
-      #   run: |
-      #     git checkout -b ${{ steps.branch-name.outputs.name }}
-      #     npm version patch -m "bump version %s"
-      #     yarn build
-      #     git push origin ${{ steps.branch-name.outputs.name }} --tags
-      # - run: npm publish
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # - name: bump dev version
-      #   #do not push the tag because there is no publish
-      #   run: |
-      #     git checkout main
-      #     npm version minor -m "next release %s"
-      #     git push origin main 
+      - id: extract-name-parts
+        run: node scripts/extract-name-params.js
+        with:
+          branch: ${{ github.ref }} 
+      - run: yarn install --frozen-lockfile
+      - name: setup git config
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+      - name: bump version
+        run: |
+          npm version patch -m "bump version %s"
+          yarn build
+          git push origin ${{ github.ref }} --tags
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: echo OPEN PR TO DEV (hopefully 1 PR open at a time)
 
-  # ng:
-  #   runs-on: ubuntu-latest
-  #   needs: react
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         repository: 'alissaVrk/ng-with-react'
-  #         ref: 'master'
-  #         token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-  #     - name: setup git config
-  #       run: |
-  #         git config user.name "GitHub Actions Bot"
-  #         git config user.email "<>"
-  #     - name: create ng branch for release
-  #       run: |
-  #         git checkout -b feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
-  #         npm i alissa-todo-react-query@${{needs.react.outputs.version}}.x
-  #         git commit -am "bump react version to ${{needs.react.outputs.version}}"
-  #         git push origin feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
-  #     - run: echo ng branch created  feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
-  #     #here we could, in theory, deploy to jenkins the new feature branch
+  ng:
+    runs-on: ubuntu-latest
+    needs: react
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          repository: 'alissaVrk/ng-with-react'
+          ref: feature/rt${{ needs.react.outputs.version }}/${{ needs.react.outputs.desc }}
+          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+      - name: setup git config
+        run: |
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+      - name: update ng react version
+        run: |
+          npm i alissa-todo-react-query
+          git commit -am "bump react version"
+          echo GGGG ${{ github.ref }}
+          git push origin ${{ github.ref }}
+      #here we could, in theory, deploy to jenkins the new feature branch
 
