--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -1,12 +1,15 @@
 name: publish release
 
 on: 
-  push: 
+  pull_request: 
+    types:
+      - closed
     branches: 
       - 'release/**'
 
 jobs:
   react:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.extract-name-parts.outputs.version }}
@@ -37,9 +40,10 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - run: echo OPEN PR TO DEV (hopefully 1 PR open at a time)
+      - run: echo OPEN PR TO DEV
 
   ng:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     needs: react
     steps:
