--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'alissaVrk/ng-with-react'
-          ref: feature/rt${{ needs.react.outputs.version }}/${{ needs.react.outputs.desc }}
+          ref: feature/rt${{ needs.react.outputs.version }}/${{ needs.react.outputs.branch-desc }}
           token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - name: setup git config
         run: |
