--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -47,10 +47,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: react
     steps:
+      - id: branch-name
+        run: echo "::set-output name=name::feature/rt${{ needs.react.outputs.version }}/${{ needs.react.outputs.branch-desc }}"
       - uses: actions/checkout@v3
         with:
           repository: 'alissaVrk/ng-with-react'
-          ref: feature/rt${{ needs.react.outputs.version }}/${{ needs.react.outputs.branch-desc }}
+          ref: ${{ steps.branch-name.outputs.name }}
           token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - name: setup git config
         run: |
@@ -60,7 +62,6 @@ jobs:
         run: |
           npm i alissa-todo-react-query
           git commit -am "bump react version"
-          echo GGGG ${{ github.ref }}
-          git push origin ${{ github.ref }}
+          git push origin ${{ steps.branch-name.outputs.name }}
       #here we could, in theory, deploy to jenkins the new feature branch
 
