--- a/.github/workflows/publish-hotfix.yml
+++ b/.github/workflows/publish-hotfix.yml
@@ -1,58 +1,66 @@
 name: publish hotfix
 
 on: 
-  push: 
+  pull_request: 
+    types:
+      - closed
     branches: 
-      - 'hotfix/*'
+      - 'hofix/**'
 
 jobs:
   react:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.package-version.outputs.version }}
+      ng-version: ${{ steps.extract-name-parts.outputs.version }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
       - run: yarn install --frozen-lockfile
+      - id: extract-name-parts
+        run: node scripts/extract-name-params.js
+        env:
+          branch: ${{ github.ref }} 
       - name: setup git config
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
       - name: bump version
         run: |
-          echo branch ${{ github.ref }}
           npm version patch -m "bump version %s"
           yarn build
           git push origin ${{ github.ref }} --tags
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - id: package-version
-        run: node scripts/extract-version.js
-  
+      - run: echo OPEN PR TO DEV
+
   ng:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     needs: react
     steps:
+      - id: branch-name
+        run: echo "::set-output name=name::release/${{ needs.react.outputs.ng-version }}"
       - uses: actions/checkout@v3
         with:
           repository: 'alissaVrk/ng-with-react'
-          ref: 'release/ng...'
-          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+          ref: ${{ steps.branch-name.outputs.name }}
+          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - name: setup git config
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-      - name: create ng branch for release
+      - name: update ng react version
         run: |
-          git checkout -b feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
-          npm i alissa-todo-react-query@${{needs.react.outputs.version}}.x
-          git commit -am "bump react version to ${{needs.react.outputs.version}}"
-          git push origin feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
-      - run: echo ng branch created  feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
+          npm i alissa-todo-react-query
+          git commit -am "bump react version"
+          git push origin ${{ steps.branch-name.outputs.name }}
       #here we could, in theory, deploy to jenkins the new feature branch
 
