--- a/.github/workflows/publish-hotfix.yml
+++ b/.github/workflows/publish-hotfix.yml
@@ -1,12 +1,9 @@
-name: create release
+name: publish hotfix
 
 on: 
-  workflow_dispatch: 
-    inputs: 
-      name: 
-        description: 'suffix for the branch names'
-        required: true
-        type: string
+  push: 
+    branches: 
+      - 'hotfix/*'
 
 jobs:
   react:
@@ -15,38 +12,28 @@ jobs:
       version: ${{ steps.package-version.outputs.version }}
     steps:
       - uses: actions/checkout@v3
-        with:
-          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
       - run: yarn install --frozen-lockfile
-      - id: package-version
-        run: node scripts/extract-version.js
       - name: setup git config
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-      - id: branch-name
-        run: echo "::set-output name=name::release/${{ steps.package-version.outputs.version}}/${{inputs.name}}"
-      - name: create release
+      - name: bump version
         run: |
-          git checkout -b ${{ steps.branch-name.outputs.name }}
+          echo branch ${{ github.ref }}
           npm version patch -m "bump version %s"
           yarn build
-          git push origin ${{ steps.branch-name.outputs.name }} --tags
+          git push origin ${{ github.ref }} --tags
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: bump dev version
-        #do not push the tag because there is no publish
-        run: |
-          git checkout main
-          npm version minor -m "next release %s"
-          git push origin main 
-
+      - id: package-version
+        run: node scripts/extract-version.js
+  
   ng:
     runs-on: ubuntu-latest
     needs: react
@@ -54,20 +41,18 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'alissaVrk/ng-with-react'
-          ref: 'master'
+          ref: 'release/ng...'
           token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - name: setup git config
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-      - id: branch-name
-        run: echo "::set-output name=name::feature/rt${{needs.react.outputs.version}}/${{inputs.name}}"
       - name: create ng branch for release
         run: |
-          git checkout -b ${{ steps.branch-name.outputs.name }}
+          git checkout -b feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
           npm i alissa-todo-react-query@${{needs.react.outputs.version}}.x
           git commit -am "bump react version to ${{needs.react.outputs.version}}"
-          git push origin ${{ steps.branch-name.outputs.name }}
-      - run: echo ng branch created ${{ steps.branch-name.outputs.name }}
+          git push origin feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
+      - run: echo ng branch created  feature/rt${{needs.react.outputs.version}}/${{inputs.name}}
       #here we could, in theory, deploy to jenkins the new feature branch
 
