--- a/.github/workflows/create-hotfix.yml
+++ b/.github/workflows/create-hotfix.yml
@@ -30,11 +30,13 @@ jobs:
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
+      - run: git checkout prod 
+      - id: package-version
+        run: node scripts/extract-version.js
       - id: branch-name
         run: echo "::set-output name=name::hofix/${{ steps.package-version.outputs.full_version}}/${{inputs.ng-version}}/${{inputs.name}}"
       - name: create hotfix
         run: |
-          git checkout prod
           git checkout -b ${{ steps.branch-name.outputs.name }}
           git push origin ${{ steps.branch-name.outputs.name }}
 
