--- a/.github/workflows/create-hotfix.yml
+++ b/.github/workflows/create-hotfix.yml
@@ -28,7 +28,9 @@ jobs:
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-      - run: git checkout prod
+      - run: | 
+          git fetch origin prod 
+          git checkout prod
       - id: package-version
         run: node scripts/extract-version.js
       - id: branch-name
