--- a/.github/workflows/publish-hotfix.yml
+++ b/.github/workflows/publish-hotfix.yml
@@ -12,7 +12,7 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
-      ng-version: ${{ steps.extract-name-parts.outputs.version }}
+      ng-version: ${{ steps.extract-name-parts.outputs.ngVersion }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -42,16 +42,17 @@ jobs:
       # TODO: this should work with a PR - so build will run
       - name: checkout main
         run: |
-          git fetch origin main
+          git fetch
           git checkout main
           git pull origin main --ff
       - id: dev-version
         run: node scripts/extract-version.js
       - name: merge to main
         run: |
-          git merge ${{ github.ref }} --ff
+          git switch -C merge/${{steps.extract-name-parts.outputs.version}}
+          git merge ${{ github.ref }}
           npm version ${{ steps.dev-version.outputs.full_version }}
-          git push origin main
+          git push origin merge/${{steps.extract-name-parts.outputs.version}}
 
   ng:
     if: github.event.pull_request.merged == true
