--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -40,7 +40,6 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # TODO: this should work with a PR - so build will run
       - name: checkout main
         run: |
           git fetch origin main
@@ -50,9 +49,11 @@ jobs:
         run: node scripts/extract-version.js
       - name: merge to main
         run: |
-          git merge ${{ github.ref }} --ff
+          git switch -C merge/${{steps.extract-name-parts.outputs.version}}
+          git merge ${{ github.ref }}
           npm version ${{ steps.dev-version.outputs.full_version }}
-          git push origin main
+          git push origin merge/${{steps.extract-name-parts.outputs.version}}
+      # TODO: this should work with a PR - so build will run
 
   ng:
     if: github.event.pull_request.merged == true
