--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -44,7 +44,7 @@ jobs:
       - name: merge to main
         run: |
           git switch -C merge/${{steps.extract-name-parts.outputs.version}}
-          git pull
+          git pull --ff
           git pull origin main --ff -X theirs
           git push origin merge/${{steps.extract-name-parts.outputs.version}}
       - name: pr
