--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -43,8 +43,8 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: merge to main
         run: |
+          git fetch
           git switch -C merge/${{steps.extract-name-parts.outputs.version}}
-          git pull --ff
           git pull origin main --ff -X theirs
           git push origin merge/${{steps.extract-name-parts.outputs.version}}
       - name: pr
