--- a/.github/workflows/publish-hotfix.yml
+++ b/.github/workflows/publish-hotfix.yml
@@ -41,7 +41,6 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      # TODO: this should work with a PR - so build will run
       - name: checkout main
         run: |
           git fetch
@@ -63,21 +62,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: react
     steps:
-      - id: branch-name
-        run: echo "::set-output name=name::release/${{ needs.react.outputs.ng-version }}"
-      - uses: actions/checkout@v3
-        with:
-          repository: 'alissaVrk/ng-with-react'
-          ref: ${{ steps.branch-name.outputs.name }}
+      - uses: ./.github/actions/update-ng-branch
+        with: 
+          branch-name: release/${{ needs.react.outputs.ng-version }}
           token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-      - name: setup git config
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-      - name: update ng react version
-        run: |
-          npm i alissa-todo-react-query
-          git commit -am "bump react version"
-          git push origin ${{ steps.branch-name.outputs.name }}
       #here we could, in theory, deploy to jenkins the new feature branch
 
