--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -29,7 +29,7 @@ jobs:
         with: 
           script: |
              const script = require('./scripts/extract-name-params.js')
-             await script(${{ github.ref }});
+             await script('${{ github.ref }}');
       - name: setup git config
         run: |
           git config user.name "GitHub Actions Bot"
