--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -12,8 +12,8 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.extract-name-parts.outputs.result.version }}
-      branch-desc: ${{ steps.extract-name-parts.outputs.result.desc }}
+      version: ${{ steps.extract-name-parts.outputs.version }}
+      branch-desc: ${{ steps.extract-name-parts.outputs.desc }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -29,7 +29,7 @@ jobs:
         with: 
           script: |
              const script = require('./scripts/extract-name-params.js')
-             await script('${{ github.ref }}');
+             script(core, '${{ github.ref }}');
       - name: setup git config
         run: |
           git config user.name "GitHub Actions Bot"
