--- a/.github/workflows/publish-hotfix.yml
+++ b/.github/workflows/publish-hotfix.yml
@@ -48,9 +48,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: react
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/update-ng-branch
         with: 
           branch-name: release/${{ needs.react.outputs.ng-version }}
           token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+      - uses: actions/checkout@v3
       #here we could, in theory, deploy to jenkins the new feature branch
 
