--- a/.github/workflows/publish-rc.yml
+++ b/.github/workflows/publish-rc.yml
@@ -18,36 +18,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-          cache: 'yarn'
-          registry-url: 'https://registry.npmjs.org'
-      - run: yarn install --frozen-lockfile
       - id: extract-name-parts
         uses: actions/github-script@v6
         with: 
           script: |
              const script = require('./scripts/extract-name-params.js')
              script(core, '${{ github.ref }}');
-      - name: setup git config
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-          echo ${{ github.actor }}
-      - name: bump version
-        run: |
-          npm version patch -m "bump version %s"
-          yarn build
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
-          tags: true
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - uses: ./.github/actions/bump-and-publish
       - uses: ./.github/actions/create-merge-pr
 
   ng:
