--- a/.github/actions/bump-and-publish/action.yml
+++ b/.github/actions/bump-and-publish/action.yml
@@ -9,13 +9,16 @@ runs:
         node-version: '16'
         cache: 'yarn'
         registry-url: 'https://registry.npmjs.org'
-    - run: yarn install --frozen-lockfile
-    - name: setup git config
+    - run: yarn install --frozen-lockfile 
+      shell: bash
+    - name: setup git config 
+      shell: bash
       run: |
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
         echo ${{ github.actor }}
-    - name: bump version
+    - name: bump version 
+      shell: bash
       run: |
         npm version patch -m "bump version %s"
         yarn build
@@ -26,5 +29,6 @@ runs:
         branch: ${{ github.ref }}
         tags: true
     - run: npm publish
+      shell: bash
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
