--- a/.github/actions/bump-and-publish/action.yml
+++ b/.github/actions/bump-and-publish/action.yml
@@ -1,5 +1,10 @@
 name: bump and publish
 description: 'bump patch version of version and publish to npm'
+inputs:
+  push-token:
+    required: true
+  npm-token:
+    required: true
 
 runs:
   using: 'composite'
@@ -25,10 +30,10 @@ runs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+        github_token: ${{ inputs.push-token }}
         branch: ${{ github.ref }}
         tags: true
     - run: npm publish
       shell: bash
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ inputs.npm-token }}
