--- a/.github/workflows/merge-to.prod.yml
+++ b/.github/workflows/merge-to.prod.yml
@@ -9,6 +9,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - run: |
           git checkout prod
           git pull origin ${{ github.ref }} --ff
+          git push origin prod
+
